2010-07-08 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
	* interopProvider.c
	[ 3003509 ] sfcb must configure IndicationFilterName 
	(based on patch by sto)

2010-07-06  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 3010272 ] Indication providers always unloaded when idle

2010-07-01  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 3017845 ] disableIndications not called on provider shutdown

	* indCIMXMLHandler.c:
	[ 2952628 ] Handler is not removed from interop-Hashtable when CI fails
	(based on patch by Till Steinbach)

	* profileProvider.c:
	[ 3022919 ] profileProvider (SLP) has increasing memory usage over time

2010-06-30  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlRequest.c:
	[ 3023502 ] Memory leak on CreateClass

	* indCIMXMLHandler.c:
	[ 2950545 ] indCIMXMLHandler destination schema correction wrong
	(proposed by Till Steinbach)

	* cimcClientSfcbLocal.c:
	[ 2968599 ] Wrong trace msg for invokeMethod (local interface)
	(patch by Klaus Kaempf)

2010-06-29  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* objectImpl.c:
	[ 3016863 ] Data corruption when replacing array properties

	* cimslp.c, cimslpSLP.c:
	[ 3022941 ] Remove HAVE_SLP_ALONE sections

	* profileProvider.c, cimslpCMPI.c:
	[ 3022934 ] SLP code calls setupControl more than once

	* profileProvider.c: 
	[ 3023079 ] slpUpdate does not release ctx on exit

	* test/running.sh, test/finaltest/finalcheck.sh:
	[ 2920363 ] make test fails if sfcb is running under valgrind

2010-06-17  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 2950521 ] Provider operations are wrongly traced
	(patch by Till Steinbach)

2010-06-16  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* instance.c:
	[ 3016295 ] Initialise refcount in CMPIInstance clone
	(patch by Tim Potter)
	
2010-05-27 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* cimslpSLP.c:
	[ 2984485 ] Possible access to freed memory in cimslpSLP.c