@@ -135,7 +135,6 @@ static int provProcMax=0;
 static int idleThreadStartHandled=0;
 
 ProviderInfo *activProvs = NULL;
-int indicationEnabled=0;
 
 unsigned long provSampleInterval=10;
 unsigned long provTimeoutInterval=25;
@@ -2148,13 +2147,6 @@ static BinResponseHdr *activateFilter(BinRequestHdr *hdr, ProviderInfo* info,
       TIMING_STOP(hdr,info)
       _SFCB_TRACE(1, ("--- Back from provider rc: %d", rci.rc));
 
-      /*if (indicationEnabled==0 && rci.rc==CMPI_RC_OK) {
-      indicationEnabled=1;
-	TIMING_START(hdr,info)
-      info->indicationMI->ft->enableIndications(info->indicationMI,ctx);
-	TIMING_STOP(hdr,info)
-      }*/
-
       if (rci.rc==CMPI_RC_OK) {
          resp = (BinResponseHdr *) calloc(1,sizeof(BinResponseHdr));
          resp->rc=1;
@@ -2204,7 +2196,7 @@ static BinResponseHdr *deactivateFilter(BinRequestHdr *hdr, ProviderInfo* info,
          *sef=se->next;
          if (activFilters==NULL) {
             _SFCB_TRACE(1, ("--- Calling disableIndications %s",info->providerName));
-            indicationEnabled=0;
+            info->indicationEnabled=0;
 	   TIMING_START(hdr,info)
             info->indicationMI->ft->disableIndications(info->indicationMI,ctx);
 	   TIMING_STOP(hdr,info)
@@ -2261,8 +2253,8 @@ static BinResponseHdr *enableIndications(BinRequestHdr *hdr, ProviderInfo* info,
 		_SFCB_RETURN(resp);  
 	}
 	
-	if (indicationEnabled==0 && rci.rc==CMPI_RC_OK) {
-		indicationEnabled=1;
+	if (info->indicationEnabled==0 && rci.rc==CMPI_RC_OK) {
+		info->indicationEnabled=1;
 		TIMING_START(hdr,info)
 		info->indicationMI->ft->enableIndications(info->indicationMI,ctx);
 		TIMING_STOP(hdr,info)
@@ -2304,8 +2296,8 @@ static BinResponseHdr *disableIndications(BinRequestHdr *hdr, ProviderInfo* info
 		_SFCB_RETURN(resp);  
 	}
 	
-	if (indicationEnabled==1 && rci.rc==CMPI_RC_OK) {
-		indicationEnabled=0;
+	if (info->indicationEnabled==1 && rci.rc==CMPI_RC_OK) {
+		info->indicationEnabled=0;
 		TIMING_START(hdr,info)
 		info->indicationMI->ft->disableIndications(info->indicationMI,ctx);
 		TIMING_STOP(hdr,info)
